--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,15 +2,15 @@
 
 <body>
     <header class="main-header-container">
-        <div class="main-header">
+        <div class="main-header container">
             <h1>
-                <a href="/">
-                    <i class="fa-solid fa-house"></i>
-                    <span>Recipes {{name}}</span>
+                <a class="main-logo" href="/">
+                    <i class="fas fa-utensils main-logo-icon"></i>
+                    <span class="main-logo-text">Recipes</span>
                 </a>
             </h1>
         </div>
-    </header>   
+    </header>
 </body>
 
 </html>
