--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -5,7 +5,8 @@
         <div class="main-header container">
             <h1>
                 <a class="main-logo" href="/">
-                    <i class="fas fa-utensils main-logo-icon"></i>
+                    <i class="fas fa-utensils
+                     main-logo-icon"></i>
                     <span class="main-logo-text">Recipes</span>
                 </a>
             </h1>
