--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -5,7 +5,12 @@
     {%include "recipes/partials/search.html"%}
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-
+            <div class="recipe recipe-list-item">
+                <div class="recipes-cover">
+                    <img src="https://fakeimg.pl/1280x720/269fe6" alt="Temporário">
+                </div>
+                <h1>Oi</h1>
+            </div>
         </div>
     </main>
 
