--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,15 +3,45 @@
 <body>
     {% include "recipes/partials/header.html" %}
     {%include "recipes/partials/search.html"%}
+   
     <main class="main-content-container">
+        
         <div class="main-content main-content-list container">
+            
             <div class="recipe recipe-list-item">
+                
                 <div class="recipes-cover">
                     <img src="https://fakeimg.pl/1280x720/269fe6" alt="Temporário">
                 </div>
-                <h1>Oi</h1>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Paulo Fernandes
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        16/10/2021 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+
+                    <div class="recipe-content">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit, voluptatem aliquid distinctio magnam quam commodi eius iste tempora iure magni maiores illo atque. Officiis animi maiores quisquam enim explicabo rerum.</p>
+                    </div>
+
             </div>
+       
         </div>
+
     </main>
 
 </body>
