--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -26,6 +26,7 @@
 
 
     <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
 
 
     <title>Recipes</title>
