--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
 
 
-    <title>Recipes</title>
+    <title>{% block title %}{% endblock title %} Recipes</title>
 
 
 
