--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -5,26 +5,28 @@
     </div>
 
     <div class="recipe-title-container">
-        <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+        <h2 class="recipe-title">{{recipe.title}}</h2>
     </div>
 
     <div class="recipe-author">
 
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            Paulo Fernandes
+            {{recipe.author.first_name}} {{recipe.author.last_name}}
         </span>
 
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            16/10/2021 às 11:21
+            {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
+            
+            
         </span>
 
         <span class="recipe-author-item">
 
             <a href="/recipes/category/cafe-da-manha/">
                 <i class="fas fa-layer-group"></i>
-                <span>Café da manhã</span>
+                <span>{{ recipe.category.name }}</span>
             </a>
 
         </span>
@@ -32,7 +34,7 @@
     </div>
 
         <div class="recipe-content">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit, voluptatem aliquid distinctio magnam quam commodi eius iste tempora iure magni maiores illo atque. Officiis animi maiores quisquam enim explicabo rerum.</p>
+            <p>{{recipe.description}}</p>
         </div>
 
         <div class="recipe-meta-container">
@@ -40,14 +42,14 @@
             <div class="recipe-meta recipe-preparation">
                 <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
                 <div class="recipe-meta-text">
-                    0 Minutos
+                    {{ recipe.preparation_time }} {{ recipe.preparation_time_unit }}
                 </div>                           
             </div>
 
             <div class="recipe-meta recipe-servings">                           
                 <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
                 <div class="recipe-meta-text">
-                    0 Porções
+                    {{ recipe.servings }} {{ recipe.servings_unit }}
                 </div>
             </div>
 
