--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,7 +1,7 @@
 <div class="recipe recipe-list-item">
                 
     <div class="recipes-cover">
-        <img src="https://fakeimg.pl/1280x720/269fe6" alt="Temporário">
+        <img src="{{ recipe.cover.url }}" alt="Temporário">
     </div>
 
     <div class="recipe-title-container">
