--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -54,13 +54,19 @@
             </div>
 
         </div>
+        {% if is_detail_page is not True %}
+            <footer class="recipe-footer">
+                    <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
+                        <i class="fas fa-eye"></i>
+                        <span>ver mais...</span>
+                    </a>
+            </footer>
+        {% endif %}
 
-        <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
-                    <i class="fas fa-eye"></i>
-                    <span>ver mais...</span>
-                </a>
-        </footer>
-
+        {% if is_detail_page %}
+            <div class="preparation-steps">
+                {{ recipe.preparation_steps|linebreaksbr }}
+            </div>
+        {% endif %}
 
 </div>
